# xdelta

./: CMakeLists.txt  README.md  xdelta3_wrapper.cpp  xdelta3_wrapper.h
xdelta3/: xdelta3-hash.h  xdelta3-main.h  xdelta3.h
